[gd_scene load_steps=4 format=3 uid="uid://5aw78krg1h6c"]

[ext_resource type="Script" path="res://scenes/entities/player_spawn_zones/start_zone/start_zone.gd" id="1_g17e3"]
[ext_resource type="Script" path="res://scenes/entities/triggers/trigger_area/trigger_area.gd" id="2_o2q8n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3yj7"]

[node name="StartPlatform" type="Node2D"]
script = ExtResource("1_g17e3")

[node name="PlayerSpawnPoint" type="Marker2D" parent="."]

[node name="TriggerArea" type="Area2D" parent="."]
script = ExtResource("2_o2q8n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource("RectangleShape2D_e3yj7")

[connection signal="triggered" from="TriggerArea" to="." method="_on_trigger_area_triggered"]
